<resources>
    <string name="app_name">About ME</string>
    <string name="name">Gaurank Maheshwari</string>
    <string name="yellow_star">yellow star</string>
    
    <string name="bio"> Hi, My name is Gaurank Maheshwari,
        \n\n You know me as Gogo,
        \n\nsdnvjsdnadfhunjkdhfukaefaknufhaeefnkaenfk
        \nadkjfkajhfiuaehflaneufahkenfkaeufhaeunfkaef
        \n\ndhfbiadfiuehfkaneufhaekufnakuefuaebfkuaebf
        \niugfiuahfiuafnaouefoafuaeifeihfuaef
        \n\naushdouadoawdoawuhiabfiae7faefbaeuf
        \n\naushdouadoawdoawuhiabfiae7faefbaeuf
        \n\naushdouadoawdoawuhiabfiae7faefbaeuf
        \n\naushdouadoawdoawuhiabfiae7faefbaeuf
        \n\naushdouadoawdoawuhiabfiae7faefbaeuf
        \n\naushdouadoawdoawuhiabfiae7faefbaeuf
        \n\naushdouadoawdoawuhiabfiae7faefbaeuf
        \n\naushdouadoawdoawuhiabfiae7faefbaeuf
        \ndfbkuaehfunaekfnaekufakuenfaeflnaelfnalef
        \nkdjbfaks
        \n\nOk bye!!

    </string>
    <string name="nickname">What is your nickname?</string>
    <string name="done">Done</string>
</resources>
